2008-12-24  Nicola Pero  <nicola.pero@meta-innovation.com>

	* gnustep-config.in: Added new --installation-domain-for=xxx option.
	* rules.make (print-gnustep-make-installation-domain): New target.

2008-12-21  Adam Fedor  <fedor@gnu.org>

	* Version 2.0.7

2008-12-19  Nicola Pero  <nicola.pero@meta-innovation.com>

	* installation-domains.conf: Added gnustep-objc to the System
	packages.
	
2008-12-19  Nicola Pero  <nicola.pero@meta-innovation.com>

	New configuration file that allows hardcore developers building
	everything from source to specify arbitrary default installation
	domains for the software.  You just need to copy the
	installation-domains.conf file to the same directory as the
	GNUstep.conf file, and edit it to customize the default
	installation domain (Thanks to Richard for the idea).

	* common.make: Read installation-domains.conf file if it exists,
	and use it to customize the default installation domains.
	* installation-domains.conf: New file.

	Reverted last change.
	* configure.ac: Removed option --disable-packages.
	* configure: Regenerated.
	* config-noarch.make.in: Removed
	GNUSTEP_INSTALL_CORE_INTO_SYSTEM_DOMAIN.
	* common.make: Reverted last change.
	
2008-12-18  Nicola Pero  <nicola.pero@meta-innovation.com>

	* configure.ac: New option --disable-packages that causes
	gnustep-make to assume packages are never involved, so it defaults
	to installing 'core' software into System by default.
	* configure: Regenerated.
	* config-noarch.make.in: Added new variable
	GNUSTEP_INSTALL_CORE_INTO_SYSTEM_DOMAIN.
	* common.make: If GNUSTEP_INSTALLATION_DOMAIN is not set,
	GNUSTEP_INSTALL_CORE_INTO_SYSTEM_DOMAIN is set to 'YES' and
	GNUSTEP_CORE_SOFTWARE is set to 'YES', set
	GNUSTEP_INSTALLATION_DOMAIN to SYSTEM.
	
2008-12-18  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Documentation/README.Packaging: New file providing complete
	instructions and recommendations on how to create GNUstep
	packages.
